# snake-game-cli

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  vcpkg.json
.github/workflows/: main.yml
config/: logging.ini
src/: main.cpp
src/engine/: game.cpp  input.cpp  objects.cpp  screen.cpp  terminal.cpp  utils.cpp
src/engine/include/: game.h  glyphs.h  input.h  objects.h  screen.h  terminal.h  utils.h
